Added bottom sheet

--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -171,5 +171,6 @@
   "notPaid": "Not paid",
   "paid": "Paid",
   "paymentId": "Payment ID",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "currentLocation": "Current location",
 }
