--- a/src/language/locales/pl.json
+++ b/src/language/locales/pl.json
@@ -171,5 +171,6 @@
   "notPaid": "Nieopłacone",
   "paid": "Opłacone",
   "paymentId": "ID płatności",
-  "loading": "Ładowanie..."
+  "loading": "Ładowanie...",
+  "currentLocation": "Aktualna lokalizacja",
 }
