Loading restaurants api changed to zustand

--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -173,4 +173,5 @@
   "paymentId": "Payment ID",
   "loading": "Loading...",
   "currentLocation": "Current location",
+  "errorOrNotFound": "Restaurant not found or address is invalid"
 }
