--- a/src/language/locales/pl.json
+++ b/src/language/locales/pl.json
@@ -173,4 +173,5 @@
   "paymentId": "ID płatności",
   "loading": "Ładowanie...",
   "currentLocation": "Aktualna lokalizacja",
+  "errorOrNotFound": "Nie znaleziono restauracji lub adres jest nieprawidłowy",
 }
