Added basket and changed cartStore

--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -2,6 +2,9 @@
   "chooseLanguage": "Choose language",
   "errorOfAdditives": "Select at least one of the choices in each category",
   "goToBasket": "Go to basket",
+  "basket": "Basket",
+  "goToCheckout": "Go to checkout",
+  "addMoreProducts": "Add more products",
   "polish": "Polish",
   "english": "English",
   "home1": "Don't know what to eat today?",
