--- a/src/language/locales/pl.json
+++ b/src/language/locales/pl.json
@@ -2,6 +2,9 @@
   "chooseLanguage": "Wybierz język",
    "errorOfAdditives": "Wybierz przynajmniej jeden z wyborów w każdej kategorii",
   "goToBasket": "Przejdź do koszyka",
+  "basket": "Koszyk",
+  "goToCheckout": "Przejdź do kasy",
+  "addMoreProducts": "Dodaj więcej produktów",
   "polish": "Polski",
   "english": "Angielski",
   "home1": "Nie wiesz co dziś zjeść?",
