Added auth store

--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -7,6 +7,8 @@
   "addMoreProducts": "Add more products",
   "polish": "Polish",
   "english": "English",
+  "hello": "Hello",
+  "myContactData": "My contact data",
   "home1": "Don't know what to eat today?",
   "home2": "Find restaurants nearby for yourself",
   "address": "Enter address...",
