--- a/src/language/locales/pl.json
+++ b/src/language/locales/pl.json
@@ -7,6 +7,8 @@
   "addMoreProducts": "Dodaj więcej produktów",
   "polish": "Polski",
   "english": "Angielski",
+  "hello": "Cześć",
+  "myContactData": "Moje dane kontaktowe",
   "home1": "Nie wiesz co dziś zjeść?",
   "home2": "Znajdź restauracje w pobliżu dla siebie",
   "address": "Podaj adres...",
