Added login functions

--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -181,5 +181,6 @@
   "loading": "Loading...",
   "currentLocation": "Current location",
   "errorOrNotFound": "Restaurant not found or address is invalid",
-  "error": "Error"
+  "error": "Error",
+  "reLogin": "Re-login"
 }
