--- a/src/language/locales/pl.json
+++ b/src/language/locales/pl.json
@@ -181,5 +181,6 @@
   "loading": "Ładowanie...",
   "currentLocation": "Aktualna lokalizacja",
   "errorOrNotFound": "Nie znaleziono restauracji lub adres jest nieprawidłowy",
-  "error": "Błąd"
+  "error": "Błąd",
+  "reLogin": "Ponów logowanie"
 }
